tests/e2e/string_templates_path_error2.error
Error: syntax error in story at line 1, column 6

1|    c = "{a}"
           ^^^

E0101: Variable `a` has not been defined.
